--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://selectmax.github.io/profile-info-static",
+  "homepage": "https://github.com/selectmax/profile-info-static",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
